--- a/Shadowrocket/Complete.conf
+++ b/Shadowrocket/Complete.conf
@@ -10564,6 +10564,20 @@ http?://123.59.30.10/adv/advInfos - reject
 ^https?://www.ft.com/__origami/service/image/v2/images/raw/https%3A%2F%2Fcreatives.ftimg.net%2Fads* - reject
 ^https?://www.lianbijr.com/adPage/ - reject
 
+
+[Rule]
+DOMAIN,api-h2.tiktokv.com,PROXY
+DOMAIN,api2-16-h2.musical.ly,PROXY
+
+[URL Rewrite]
+((carrier|account|sys)_region=)CN ((carrier|account|sys)_region=)hk 302
+(.*video_id=\w{32})(.*watermark=)(.*) (.*video_id=\w{32})(.*watermark=)(.*)$1 302
+
+[MITM]
+hostname = ,api*.tiktokv.com,*.musical.ly,
+
+
+
 [MITM]
 enable = true
 
