--- a/Shadowrocket/2021.conf
+++ b/Shadowrocket/2021.conf
@@ -8383,13 +8383,35 @@ DOMAIN-SUFFIX,im9.com,DIRECT
 DOMAIN-SUFFIX,smtcdns.net
 
 # > IQIYI
-USER-AGENT,QIYI*,DIRECT
-USER-AGENT,iQiYi*,DIRECT
-DOMAIN-KEYWORD,qiyi,DIRECT
-DOMAIN-SUFFIX,qy.net,DIRECT
-IP-CIDR,101.227.0.0/16,DIRECT,no-resolve
-IP-CIDR,101.224.0.0/13,DIRECT,no-resolve
-IP-CIDR,119.176.0.0/12,DIRECT,no-resolve
+USER-AGENT,iQIYI*,DIRECT
+USER-AGENT,QYPlayer*,DIRECT
+DOMAIN,intel-cache.m.iqiyi.com,DIRECT
+DOMAIN,intel-cache.video.iqiyi.com,DIRECT
+DOMAIN,intl-rcd.iqiyi.com,DIRECT
+DOMAIN,intl-subscription.iqiyi.com,DIRECT
+DOMAIN-SUFFIX,inter.iqiyi.com,DIRECT
+DOMAIN-SUFFIX,inter.ptqy.gitv.tv,DIRECT
+DOMAIN-SUFFIX,intl.iqiyi.com,DIRECT
+DOMAIN-SUFFIX,iq.com,DIRECT
+
+IP-CIDR,103.44.56.0/22,DIRECT,no-resolve
+IP-CIDR,118.26.120.0/24,DIRECT,no-resolve
+IP-CIDR,118.26.32.0/23,DIRECT,no-resolve
+IP-CIDR,223.119.62.225/28,DIRECT,no-resolve
+IP-CIDR,23.40.241.251/32,DIRECT,no-resolve
+IP-CIDR,23.40.242.10/32,DIRECT,no-resolve
+
+# URL-REGEX,^https?:\/\/int[\w-\.]+iqiyi\.com,DIRECT
+
+// DOMAIN,du-feige-intl.iqiyi.com,DIRECT
+// DOMAIN,intl.policy.iqiyi.com,DIRECT
+// DOMAIN,intl-act.vip.iqiyi.com,DIRECT
+// DOMAIN,intl-cmonitor.iqiyi.com,DIRECT
+// DOMAIN,intl-i.vip.iqiyi.com,DIRECT
+// DOMAIN,intl-im-hist-api.iqiyi.com,DIRECT
+// DOMAIN,intl-passport.iqiyi.com,DIRECT
+// DOMAIN,intl-sns.iqiyi.com,DIRECT
+// DOMAIN,msg-intl.qy.net,DIRECT
 
 # > letv
 DOMAIN-SUFFIX,api.mob.app.letv.com,DIRECT
@@ -8470,8 +8492,13 @@ DOMAIN-SUFFIX,bbci.co,PROXY
 DOMAIN-SUFFIX,bbci.co.uk,PROXY
 
 # > DAZN
+DOMAIN-SUFFIX,cdn.cookielaw.org,PROXY
+DOMAIN-SUFFIX,amplify.outbrain.com,PROXY
+DOMAIN-SUFFIX,bluekai.com,PROXY
+DOMAIN-SUFFIX,cdn.cookielaw.org,PROXY
 DOMAIN-SUFFIX,control.kochava.com,PROXY
 DOMAIN-SUFFIX,d151l6v8er5bdm.cloudfront.net,PROXY
+DOMAIN-SUFFIX,d1sgwhnao7452x.cloudfront.net,PROXY
 DOMAIN-SUFFIX,dazn.com,PROXY
 DOMAIN-SUFFIX,dazn-api.com,PROXY
 DOMAIN-SUFFIX,dazndn.com,PROXY
@@ -8480,30 +8507,27 @@ DOMAIN-SUFFIX,dcalivedazn.akamaized.net,PROXY
 DOMAIN-SUFFIX,dca-ll-livedazn-dznlivejp.s.llnwi.net,PROXY
 DOMAIN-SUFFIX,dca-ll-voddazn-dznvodjp.s.llnwi.net,PROXY
 DOMAIN-SUFFIX,dcblivedazn.akamaized.net,PROXY
+DOMAIN-SUFFIX,docomo.ne.jp,PROXY
 DOMAIN-SUFFIX,indazn.com,PROXY
+DOMAIN-SUFFIX,indaznlab.com,PROXY
 DOMAIN-SUFFIX,intercom.io,PROXY
+DOMAIN-SUFFIX,pause-confirmed-marketing-images-prod.s3.eu-central-1.amazonaws.com,PROXY
+DOMAIN-SUFFIX,perfops.doracdn.com,PROXY
+DOMAIN-SUFFIX,rest.zuora.com,PROXY
 DOMAIN-SUFFIX,s.yimg.jp,PROXY
+DOMAIN-SUFFIX,vjs.zencdn.net,PROXY
+DOMAIN-SUFFIX,yahoo.co.jp,PROXY
 
-# > Disney Plus
-USER-AGENT,Disney*,PROXY
-DOMAIN-SUFFIX,adobedtm.com,PROXY
-DOMAIN-SUFFIX,bam.nr-date.net,PROXY
-DOMAIN-SUFFIX,bamgrid.com,PROXY
-DOMAIN-SUFFIX,braze.com,PROXY
-DOMAIN-SUFFIX,cdn.optimizely.com,PROXY
-DOMAIN-SUFFIX,cdn.registerdisney.go.com,PROXY
-DOMAIN-SUFFIX,cws.conviva.com,PROXY
-DOMAIN-SUFFIX,d9.flashtalking.com,PROXY
-DOMAIN-SUFFIX,disney.demdex.net,PROXY
-DOMAIN-SUFFIX,disney.my.sentry.io,PROXY
-DOMAIN-SUFFIX,disneyplus.bn5x.net,PROXY
-DOMAIN-SUFFIX,disneyplus.com,PROXY
-DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net,PROXY
-DOMAIN-SUFFIX,disney-plus.net,PROXY
-DOMAIN-SUFFIX,disney-portal.my.onetrust.com,PROXY
-DOMAIN-SUFFIX,dssott.com,PROXY
-DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,PROXY
-DOMAIN-SUFFIX,js-agent.newrelic.com,PROXY
+# > Discovery Plus
+USER-AGENT,DPlus*,PROXY
+DOMAIN-SUFFIX,content-ause1-ur-discovery1.uplynk.com,PROXY
+DOMAIN-SUFFIX,disco-api.com,PROXY
+DOMAIN-SUFFIX,discoveryplus.com,PROXY
+DOMAIN-SUFFIX,fwmrm.net,PROXY
+DOMAIN-SUFFIX,getblueshift.com,PROXY
+DOMAIN-SUFFIX,litix.io,PROXY
+DOMAIN-SUFFIX,mobile-collector.newrelic.com,PROXY
+DOMAIN-SUFFIX,uplynk.com,PROXY
 
 # > encoreTVB
 USER-AGENT,encoreTVB*,PROXY
@@ -8542,9 +8566,9 @@ DOMAIN-SUFFIX,s3-ap-southeast-1.amazonaws.com,PROXY
 # > Hulu(フールー)
 DOMAIN-SUFFIX,happyon.jp,PROXY
 DOMAIN-SUFFIX,hulu.jp,PROXY
+DOMAIN-SUFFIX,prod.hjholdings.tv,PROXY
 DOMAIN-SUFFIX,streaks.jp,PROXY
 DOMAIN-SUFFIX,yb.uncn.jp,PROXY
-DOMAIN-SUFFIX,yahoo.co.jp,PROXY
 
 # > Hulu
 DOMAIN-SUFFIX,cws-hulu.conviva.com,PROXY
@@ -8626,6 +8650,11 @@ DOMAIN-SUFFIX,nowe.com,PROXY
 DOMAIN-SUFFIX,viu.com,PROXY
 DOMAIN-SUFFIX,viu.tv,PROXY
 DOMAIN-SUFFIX,viu.now.com,PROXY
+
+# > WeTV
+USER-AGENT,WeTV*,PROXY
+DOMAIN-SUFFIX,wetv.vip,PROXY
+DOMAIN-SUFFIX,wetvinfo.com,PROXY
 
 
 
@@ -8734,6 +8763,27 @@ DOMAIN-SUFFIX,googlevideo.com,PROXY
 DOMAIN-SUFFIX,gvt2.com,PROXY
 DOMAIN-SUFFIX,youtu.be,PROXY
 DOMAIN-SUFFIX,ytimg.com,PROXY
+
+# > Disney Plus
+USER-AGENT,Disney*,PROXY
+DOMAIN-SUFFIX,adobedtm.com,PROXY
+DOMAIN-SUFFIX,bam.nr-date.net,PROXY
+DOMAIN-SUFFIX,bamgrid.com,PROXY
+DOMAIN-SUFFIX,braze.com,PROXY
+DOMAIN-SUFFIX,cdn.optimizely.com,PROXY
+DOMAIN-SUFFIX,cdn.registerdisney.go.com,PROXY
+DOMAIN-SUFFIX,cws.conviva.com,PROXY
+DOMAIN-SUFFIX,d9.flashtalking.com,PROXY
+DOMAIN-SUFFIX,disney.demdex.net,PROXY
+DOMAIN-SUFFIX,disney.my.sentry.io,PROXY
+DOMAIN-SUFFIX,disneyplus.bn5x.net,PROXY
+DOMAIN-SUFFIX,disneyplus.com,PROXY
+DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net,PROXY
+DOMAIN-SUFFIX,disney-plus.net,PROXY
+DOMAIN-SUFFIX,disney-portal.my.onetrust.com,PROXY
+DOMAIN-SUFFIX,dssott.com,PROXY
+DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,PROXY
+DOMAIN-SUFFIX,js-agent.newrelic.com,PROXY
 
 
 
