--- a/Shadowrocket/2021.conf
+++ b/Shadowrocket/2021.conf
@@ -2261,7 +2261,6 @@ DOMAIN-SUFFIX,chmae.com,REJECT
 DOMAIN-SUFFIX,chnhty.com,REJECT
 DOMAIN-SUFFIX,chuantu.biz,REJECT
 DOMAIN-SUFFIX,chushoushijian.cn,REJECT
-DOMAIN-SUFFIX,c-hzgt2.getui.com,REJECT
 DOMAIN-SUFFIX,ci.csefaazc.net,REJECT
 DOMAIN-SUFFIX,ciajingman.com,REJECT
 DOMAIN-SUFFIX,cilidaquan.pw,REJECT
@@ -3555,7 +3554,6 @@ DOMAIN-SUFFIX,g.zx-jsp.com,REJECT
 DOMAIN-SUFFIX,g1.0573ren.com,REJECT
 DOMAIN-SUFFIX,g1.08160.cn,REJECT
 DOMAIN-SUFFIX,g1.163.com,REJECT
-DOMAIN-SUFFIX,g1.tagtic.cn,REJECT
 DOMAIN-SUFFIX,g1.taijuba.com,REJECT
 DOMAIN-SUFFIX,g1c5.com,REJECT
 DOMAIN-SUFFIX,g1f5.com,REJECT
@@ -7740,7 +7738,6 @@ DOMAIN-SUFFIX,wxb.wxbdfm.com,REJECT
 DOMAIN-SUFFIX,wxmmh.net,REJECT
 DOMAIN-SUFFIX,wxsnsdy.tc.qq.com,REJECT
 DOMAIN-SUFFIX,wxsnsdy.video.qq.com,REJECT
-DOMAIN-SUFFIX,wxsnsdy.wxs.qq.com,REJECT
 DOMAIN-SUFFIX,wxsnsdythumb.wxs.qq.com,REJECT
 DOMAIN-SUFFIX,wxtz.houmags.com,REJECT
 DOMAIN-SUFFIX,wxwm1.ikuailian.com,REJECT
@@ -8440,6 +8437,7 @@ DOMAIN-SUFFIX,abema.tv,PROXY
 DOMAIN-SUFFIX,akamaized.net,PROXY
 DOMAIN-SUFFIX,ameba.jp,PROXY
 DOMAIN-SUFFIX,hayabusa.io,PROXY
+DOMAIN-KEYWORD,abematv.akamaized.net,PROXY
 
 # > Amazon Prime Video
 USER-AGENT,InstantVideo.US*,PROXY
@@ -8492,31 +8490,13 @@ DOMAIN-SUFFIX,bbci.co,PROXY
 DOMAIN-SUFFIX,bbci.co.uk,PROXY
 
 # > DAZN
-DOMAIN-SUFFIX,cdn.cookielaw.org,PROXY
-DOMAIN-SUFFIX,amplify.outbrain.com,PROXY
-DOMAIN-SUFFIX,bluekai.com,PROXY
-DOMAIN-SUFFIX,cdn.cookielaw.org,PROXY
-DOMAIN-SUFFIX,control.kochava.com,PROXY
-DOMAIN-SUFFIX,d151l6v8er5bdm.cloudfront.net,PROXY
-DOMAIN-SUFFIX,d1sgwhnao7452x.cloudfront.net,PROXY
+USER-AGENT,DAZN*,PROXY
+DOMAIN,d151l6v8er5bdm.cloudfront.net,PROXY
 DOMAIN-SUFFIX,dazn.com,PROXY
 DOMAIN-SUFFIX,dazn-api.com,PROXY
-DOMAIN-SUFFIX,dazndn.com,PROXY
-DOMAIN-SUFFIX,dc2-vodhls-perform.secure.footprint.net,PROXY
-DOMAIN-SUFFIX,dcalivedazn.akamaized.net,PROXY
-DOMAIN-SUFFIX,dca-ll-livedazn-dznlivejp.s.llnwi.net,PROXY
-DOMAIN-SUFFIX,dca-ll-voddazn-dznvodjp.s.llnwi.net,PROXY
-DOMAIN-SUFFIX,dcblivedazn.akamaized.net,PROXY
-DOMAIN-SUFFIX,docomo.ne.jp,PROXY
 DOMAIN-SUFFIX,indazn.com,PROXY
-DOMAIN-SUFFIX,indaznlab.com,PROXY
-DOMAIN-SUFFIX,intercom.io,PROXY
-DOMAIN-SUFFIX,pause-confirmed-marketing-images-prod.s3.eu-central-1.amazonaws.com,PROXY
-DOMAIN-SUFFIX,perfops.doracdn.com,PROXY
-DOMAIN-SUFFIX,rest.zuora.com,PROXY
-DOMAIN-SUFFIX,s.yimg.jp,PROXY
-DOMAIN-SUFFIX,vjs.zencdn.net,PROXY
-DOMAIN-SUFFIX,yahoo.co.jp,PROXY
+DOMAIN-KEYWORD,livedazn,PROXY
+DOMAIN-KEYWORD,voddazn,PROXY
 
 # > Discovery Plus
 USER-AGENT,DPlus*,PROXY
@@ -8547,21 +8527,28 @@ DOMAIN-SUFFIX,akamaized.net,PROXY
 DOMAIN-SUFFIX,foxplus.com,PROXY
 DOMAIN-SUFFIX,theplatform.com,PROXY
 
-# > HBO NOW & HBO GO
-USER-AGENT,HBO%20NOW*,PROXY
-DOMAIN-SUFFIX,bcbolthboa-a.akamaihd.net,PROXY
-DOMAIN-SUFFIX,cf-images.ap-southeast-1.prod.boltdns.net,PROXY
-DOMAIN-SUFFIX,execute-api.ap-southeast-1.amazonaws.com,PROXY
-DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,PROXY
+# > HBO Max
+USER-AGENT,HBOMAX*,PROXY
 DOMAIN-SUFFIX,hbo.com,PROXY
-DOMAIN-SUFFIX,hboasia.com,PROXY
 DOMAIN-SUFFIX,hbogo.com,PROXY
+DOMAIN-SUFFIX,hbonow.com,PROXY
+DOMAIN-SUFFIX,hbomax.com,PROXY
+
+# > HBO GO
+USER-AGENT,HBO%20GO%20PROD%20HKG*,PROXY
+DOMAIN,44wilhpljf.execute-api.ap-southeast-1.amazonaws.com,PROXY
+DOMAIN,bcbolthboa-a.akamaihd.net,PROXY
+DOMAIN,cf-images.ap-southeast-1.prod.boltdns.net,PROXY
+DOMAIN,dai3fd1oh325y.cloudfront.net,PROXY
+DOMAIN,hboasia1-i.akamaihd.net,PROXY
+DOMAIN,hboasia2-i.akamaihd.net,PROXY
+DOMAIN,hboasia3-i.akamaihd.net,PROXY
+DOMAIN,hboasia4-i.akamaihd.net,PROXY
+DOMAIN,hboasia5-i.akamaihd.net,PROXY
+DOMAIN,players.brightcove.net,PROXY
+DOMAIN,s3-ap-southeast-1.amazonaws.com,PROXY
 DOMAIN-SUFFIX,hbogoasia.com,PROXY
 DOMAIN-SUFFIX,hbogoasia.hk,PROXY
-DOMAIN-SUFFIX,hbomax.com,PROXY
-DOMAIN-SUFFIX,hbonow.com,PROXY
-DOMAIN-SUFFIX,manifest.prod.boltdns.net,PROXY
-DOMAIN-SUFFIX,s3-ap-southeast-1.amazonaws.com,PROXY
 
 # > Hulu(フールー)
 DOMAIN-SUFFIX,happyon.jp,PROXY
@@ -8800,7 +8787,12 @@ IP-CIDR6,2001:67c:4e8::/48,PROXY,no-resolve
 IP-CIDR6,2001:b28:f23d::/48,PROXY,no-resolve
 IP-CIDR6,2001:b28:f23f::/48,PROXY,no-resolve
 
-
+# > ClubHouse
+DOMAIN-SUFFIX,clubhouseapi.com,PROXY
+DOMAIN-SUFFIX,clubhouseprod.s3.amazonaws.com,PROXY
+DOMAIN-SUFFIX,clubhouse.pubnub.com,PROXY
+DOMAIN-SUFFIX,maintenance.joinclubhouse.com,PROXY
+DOMAIN-SUFFIX,ap3.agora.io,PROXY
 
 # > Fast
 DOMAIN-SUFFIX,fast.com,PROXY
@@ -9027,6 +9019,7 @@ DOMAIN-SUFFIX,cnn.com,PROXY
 DOMAIN-SUFFIX,cocoapods.org,PROXY
 DOMAIN-SUFFIX,comodoca.com,PROXY
 DOMAIN-SUFFIX,content.office.net,PROXY
+DOMAIN-SUFFIX,crisp.chat,PROXY
 DOMAIN-SUFFIX,culturedcode.com,PROXY
 DOMAIN-SUFFIX,cygames.jp,PROXY
 DOMAIN-SUFFIX,d.pr,PROXY
@@ -9757,7 +9750,6 @@ DOMAIN-SUFFIX,alipayobjects.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
 DOMAIN-SUFFIX,aliyuncs.com,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
-DOMAIN-SUFFIX,api.crisp.chat,DIRECT
 DOMAIN-SUFFIX,appshike.com,DIRECT
 DOMAIN-SUFFIX,appstore.com,DIRECT
 DOMAIN-SUFFIX,autonavi.com,DIRECT
